// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`seed: correctly seeds data 1`] = `
Object {
  "House": Array [
    Object {
      "address": "irevaumi",
      "id": "3c6a84f5-da63-57df-8bc0-611398c5f6bd",
      "numberOfRooms": 127348283,
      "residents": Array [
        Object {
          "email": "ju",
          "id": "e13d34ca-0872-5019-9469-fb4d3a0f816e",
          "isActive": true,
          "name": "sezsi",
        },
      ],
    },
    Object {
      "address": "lavub",
      "id": "d0b09399-5dfe-5f66-9989-17958b9c7954",
      "numberOfRooms": -928052335,
      "residents": Array [],
    },
    Object {
      "address": "uze",
      "id": "e326250d-c6ad-52fc-8f56-865e43b3f5ee",
      "numberOfRooms": -56942030,
      "residents": Array [
        Object {
          "email": "junla",
          "id": "a0171dea-a8d6-5667-94b9-f5b98842fbbf",
          "isActive": false,
          "name": "kos",
        },
        Object {
          "email": "jocnuf",
          "id": "8763d7e2-a361-5ba2-ada9-52f4369cd413",
          "isActive": true,
          "name": "husefuw",
        },
        Object {
          "email": "wijug",
          "id": "993f7b9f-f9be-5d51-a8f8-eac3312d6bef",
          "isActive": false,
          "name": "fef",
        },
      ],
    },
  ],
  "Pet": Array [
    Object {
      "PetId": 1,
      "animal": "Dog",
      "birthday": 2019-10-10T18:26:07.269Z,
      "name": "gafgohrak",
      "toys": Array [],
    },
    Object {
      "PetId": 2,
      "animal": "Dog",
      "birthday": 2019-10-10T18:26:07.269Z,
      "name": "mabuj",
      "toys": Array [],
    },
    Object {
      "PetId": 3,
      "animal": "Cat",
      "birthday": 2019-10-10T18:26:07.269Z,
      "name": "taj",
      "toys": Array [],
    },
    Object {
      "PetId": 4,
      "animal": "Dog",
      "birthday": 2019-10-10T18:26:07.269Z,
      "name": "cuval",
      "toys": Array [],
    },
    Object {
      "PetId": 5,
      "animal": "Dog",
      "birthday": 2019-10-10T18:26:07.269Z,
      "name": "unukaho",
      "toys": Array [],
    },
    Object {
      "PetId": 6,
      "animal": "Cat",
      "birthday": 2019-10-10T18:26:07.269Z,
      "name": "tibawha",
      "toys": Array [],
    },
  ],
  "Toy": Array [
    Object {
      "id": "b5ef1b38-1451-4a63-9094-9725cd65e908",
      "name": "ofosid",
      "price": -97579029233.664,
    },
    Object {
      "id": "579e3c9c-20ee-44b4-99f6-d295d6dd1255",
      "name": "ci",
      "price": 659644306633.5232,
    },
    Object {
      "id": "42c6c9ad-e78c-40db-b35a-6595ffc25fe8",
      "name": "fopcu",
      "price": 399917433697.0752,
    },
  ],
  "User": Array [
    Object {
      "email": "ju",
      "house": null,
      "id": "e13d34ca-0872-5019-9469-fb4d3a0f816e",
      "isActive": true,
      "name": "sezsi",
      "pet": Object {
        "PetId": 1,
        "animal": "Dog",
        "birthday": 2019-10-10T18:26:07.269Z,
        "name": "gafgohrak",
      },
    },
    Object {
      "email": "junla",
      "house": null,
      "id": "a0171dea-a8d6-5667-94b9-f5b98842fbbf",
      "isActive": false,
      "name": "kos",
      "pet": Object {
        "PetId": 2,
        "animal": "Dog",
        "birthday": 2019-10-10T18:26:07.269Z,
        "name": "mabuj",
      },
    },
    Object {
      "email": "jocnuf",
      "house": null,
      "id": "8763d7e2-a361-5ba2-ada9-52f4369cd413",
      "isActive": true,
      "name": "husefuw",
      "pet": Object {
        "PetId": 3,
        "animal": "Cat",
        "birthday": 2019-10-10T18:26:07.269Z,
        "name": "taj",
      },
    },
    Object {
      "email": "wijug",
      "house": null,
      "id": "993f7b9f-f9be-5d51-a8f8-eac3312d6bef",
      "isActive": false,
      "name": "fef",
      "pet": Object {
        "PetId": 4,
        "animal": "Dog",
        "birthday": 2019-10-10T18:26:07.269Z,
        "name": "cuval",
      },
    },
    Object {
      "email": "liptemdov",
      "house": null,
      "id": "e626ece0-ae40-531a-aef9-5d5c32203d45",
      "isActive": true,
      "name": "leg",
      "pet": Object {
        "PetId": 5,
        "animal": "Dog",
        "birthday": 2019-10-10T18:26:07.269Z,
        "name": "unukaho",
      },
    },
  ],
}
`;

exports[`seed: correctly seeds data 2`] = `
Array [
  Array [
    Object {
      "address": "irevaumi",
      "id": "3c6a84f5-da63-57df-8bc0-611398c5f6bd",
      "numberOfRooms": 127348283,
      "residents": Array [
        Object {
          "email": "ju",
          "id": "e13d34ca-0872-5019-9469-fb4d3a0f816e",
          "isActive": true,
          "name": "sezsi",
        },
      ],
    },
    Object {
      "address": "lavub",
      "id": "d0b09399-5dfe-5f66-9989-17958b9c7954",
      "numberOfRooms": -928052335,
      "residents": Array [],
    },
    Object {
      "address": "uze",
      "id": "e326250d-c6ad-52fc-8f56-865e43b3f5ee",
      "numberOfRooms": -56942030,
      "residents": Array [
        Object {
          "email": "junla",
          "id": "a0171dea-a8d6-5667-94b9-f5b98842fbbf",
          "isActive": false,
          "name": "kos",
        },
        Object {
          "email": "jocnuf",
          "id": "8763d7e2-a361-5ba2-ada9-52f4369cd413",
          "isActive": true,
          "name": "husefuw",
        },
        Object {
          "email": "wijug",
          "id": "993f7b9f-f9be-5d51-a8f8-eac3312d6bef",
          "isActive": false,
          "name": "fef",
        },
      ],
    },
  ],
  Array [
    Object {
      "PetId": 1,
      "animal": "Dog",
      "birthday": 2019-10-10T18:26:07.269Z,
      "name": "gafgohrak",
      "toys": Array [],
      "users": Array [
        Object {
          "email": "ju",
          "id": "e13d34ca-0872-5019-9469-fb4d3a0f816e",
          "isActive": true,
          "name": "sezsi",
        },
      ],
    },
    Object {
      "PetId": 2,
      "animal": "Dog",
      "birthday": 2019-10-10T18:26:07.269Z,
      "name": "mabuj",
      "toys": Array [],
      "users": Array [
        Object {
          "email": "junla",
          "id": "a0171dea-a8d6-5667-94b9-f5b98842fbbf",
          "isActive": false,
          "name": "kos",
        },
      ],
    },
    Object {
      "PetId": 3,
      "animal": "Cat",
      "birthday": 2019-10-10T18:26:07.269Z,
      "name": "taj",
      "toys": Array [],
      "users": Array [
        Object {
          "email": "jocnuf",
          "id": "8763d7e2-a361-5ba2-ada9-52f4369cd413",
          "isActive": true,
          "name": "husefuw",
        },
      ],
    },
    Object {
      "PetId": 4,
      "animal": "Dog",
      "birthday": 2019-10-10T18:26:07.269Z,
      "name": "cuval",
      "toys": Array [],
      "users": Array [
        Object {
          "email": "wijug",
          "id": "993f7b9f-f9be-5d51-a8f8-eac3312d6bef",
          "isActive": false,
          "name": "fef",
        },
      ],
    },
    Object {
      "PetId": 5,
      "animal": "Dog",
      "birthday": 2019-10-10T18:26:07.269Z,
      "name": "unukaho",
      "toys": Array [],
      "users": Array [
        Object {
          "email": "liptemdov",
          "id": "e626ece0-ae40-531a-aef9-5d5c32203d45",
          "isActive": true,
          "name": "leg",
        },
      ],
    },
    Object {
      "PetId": 6,
      "animal": "Cat",
      "birthday": 2019-10-10T18:26:07.269Z,
      "name": "tibawha",
      "toys": Array [],
      "users": Array [],
    },
  ],
  Array [
    Object {
      "id": "b5ef1b38-1451-4a63-9094-9725cd65e908",
      "name": "ofosid",
      "pet": null,
      "price": -97579029233.664,
    },
    Object {
      "id": "579e3c9c-20ee-44b4-99f6-d295d6dd1255",
      "name": "ci",
      "pet": null,
      "price": 659644306633.5232,
    },
    Object {
      "id": "42c6c9ad-e78c-40db-b35a-6595ffc25fe8",
      "name": "fopcu",
      "pet": null,
      "price": 399917433697.0752,
    },
  ],
  Array [
    Object {
      "email": "ju",
      "house": Object {
        "address": "irevaumi",
        "id": "3c6a84f5-da63-57df-8bc0-611398c5f6bd",
        "numberOfRooms": 127348283,
      },
      "id": "e13d34ca-0872-5019-9469-fb4d3a0f816e",
      "isActive": true,
      "name": "sezsi",
      "pet": Object {
        "PetId": 1,
        "animal": "Dog",
        "birthday": 2019-10-10T18:26:07.269Z,
        "name": "gafgohrak",
      },
    },
    Object {
      "email": "junla",
      "house": Object {
        "address": "uze",
        "id": "e326250d-c6ad-52fc-8f56-865e43b3f5ee",
        "numberOfRooms": -56942030,
      },
      "id": "a0171dea-a8d6-5667-94b9-f5b98842fbbf",
      "isActive": false,
      "name": "kos",
      "pet": Object {
        "PetId": 2,
        "animal": "Dog",
        "birthday": 2019-10-10T18:26:07.269Z,
        "name": "mabuj",
      },
    },
    Object {
      "email": "jocnuf",
      "house": Object {
        "address": "uze",
        "id": "e326250d-c6ad-52fc-8f56-865e43b3f5ee",
        "numberOfRooms": -56942030,
      },
      "id": "8763d7e2-a361-5ba2-ada9-52f4369cd413",
      "isActive": true,
      "name": "husefuw",
      "pet": Object {
        "PetId": 3,
        "animal": "Cat",
        "birthday": 2019-10-10T18:26:07.269Z,
        "name": "taj",
      },
    },
    Object {
      "email": "wijug",
      "house": Object {
        "address": "uze",
        "id": "e326250d-c6ad-52fc-8f56-865e43b3f5ee",
        "numberOfRooms": -56942030,
      },
      "id": "993f7b9f-f9be-5d51-a8f8-eac3312d6bef",
      "isActive": false,
      "name": "fef",
      "pet": Object {
        "PetId": 4,
        "animal": "Dog",
        "birthday": 2019-10-10T18:26:07.269Z,
        "name": "cuval",
      },
    },
    Object {
      "email": "liptemdov",
      "house": null,
      "id": "e626ece0-ae40-531a-aef9-5d5c32203d45",
      "isActive": true,
      "name": "leg",
      "pet": Object {
        "PetId": 5,
        "animal": "Dog",
        "birthday": 2019-10-10T18:26:07.269Z,
        "name": "unukaho",
      },
    },
  ],
]
`;
